# django-siwe-auth

./: .gitignore  .gitmodules  LICENSE.txt  Makefile  README.md  pyproject.toml
examples/notepad/: manage.py
examples/notepad/app/: admin.py  models.py  urls.py  views.py
examples/notepad/app/migrations/: 0001_initial.py  0002_sharednotepad.py
examples/notepad/app/static/app/: style.css
examples/notepad/app/templates/app/: index.html
examples/notepad/frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
examples/notepad/frontend/src/: providers.ts
examples/notepad/notepad/: asgi.py  settings.py  urls.py  wsgi.py
siwe_auth/: admin.py  apps.py  backend.py  models.py  urls.py  views.py
siwe_auth/custom_groups/: erc1155.py  erc20.py  erc721.py  group_manager.py
siwe_auth/frontend/: package-lock.json  package.json  webpack.config.js
siwe_auth/frontend/src/: index.js
siwe_auth/migrations/: 0001_initial.py  0002_alter_wallet_created.py
siwe_auth/static/siwe_auth/js/: login.js
siwe_auth/templates/siwe_auth/: login.html
tests/: test_models.py  test_siwe_auth.py
